--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title>Charles Mativo</title>
   </head>
   <body>
-
+    <h1>Hello, Codeschool!</h1>
+    <ul>
+      <li>Interactive website development</li>\
+      <li>Machine learning</li>
+      <li>Watson API</li>
+    </ul>
   </body>
 </html>
