--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Charles Mativo</title>
   </head>
   <body>
-    <h1>Hello, Codeschool!</h1>
+    <h1>Hello, Code School!</h1>
     <ul>
       <li>Interactive website development</li>\
       <li>Machine learning</li>
